<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    tools:context="com.sh3h.metercard.bundle.ui.information.RecentMeterReadingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="34dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lable_chaobiaorq"
                android:textColor="@color/text_content"
                android:textSize="@dimen/text_size_meduim" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lable_shangcicm"
                android:textColor="@color/text_content"
                android:textSize="@dimen/text_size_meduim" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lable_bencicm"
                android:textColor="@color/text_content"
                android:textSize="@dimen/text_size_meduim" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/label_bencisl"
                android:textColor="@color/text_content"
                android:textSize="@dimen/text_size_meduim" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/label_chaobiaozt"
                android:textColor="@color/text_content"
                android:textSize="@dimen/text_size_meduim" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_recent_meter_reading"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="@color/background_clear"
            android:divider="@null"
            android:fadingEdge="none"
            android:fastScrollEnabled="false"
            android:listSelector="@android:color/transparent"
            android:overScrollMode="never"
            android:scrollbars="none" />
    </LinearLayout>
</android.support.v4.widget.SwipeRefreshLayout>
